--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.0.0",
     "core-js": "^2.5.4",
     "cors": "^2.8.4",
+    "ng-pick-datetime": "^5.2.5",
     "ngx-toastr": "^8.7.3",
     "rxjs": "^6.1.0",
     "rxjs-compat": "^6.1.0",
