--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.0",
+    "@angular/cdk": "^6.3.0",
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
     "@angular/core": "^6.0.0",
     "@angular/forms": "^6.0.0",
     "@angular/http": "^6.0.0",
+    "@angular/material": "^6.3.0",
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
@@ -26,6 +28,7 @@
     "ngx-toastr": "^8.7.3",
     "rxjs": "^6.1.0",
     "rxjs-compat": "^6.1.0",
+    "uuid": "^3.2.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
