--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "angular2-uuid": "^1.1.1",
     "core-js": "^2.5.4",
     "cors": "^2.8.4",
     "ng-pick-datetime": "^5.2.5",
