--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "name": "school-management",
   "version": "0.0.1",
+  "postinstall": "ng build",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng build && node app.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+    "engines": {
+    "node": "8.6.0",
+    "npm": "5.0.1"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.0",
+    "@angular/cli": "1.4.4",
     "@angular/cdk": "^6.3.0",
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
@@ -30,7 +36,8 @@
     "rxjs": "^6.1.0",
     "rxjs-compat": "^6.1.0",
     "uuid": "^3.2.1",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "typescript": "~2.3.3"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.0",
@@ -51,6 +58,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "~2.3.3"
   }
 }
