--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-    "engines": {
+  "engines": {
     "node": "8.6.0",
     "npm": "5.0.1"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.0",
-    "@angular/cli": "1.4.4",
     "@angular/cdk": "^6.3.0",
+    "@angular/cli": "1.4.4",
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
     "@angular/core": "^6.0.0",
@@ -31,18 +31,20 @@
     "angular2-uuid": "^1.1.1",
     "core-js": "^2.5.4",
     "cors": "^2.8.4",
+    "jspdf": "^1.4.1",
+    "jspdf-autotable": "^2.3.4",
     "ng-pick-datetime": "^5.2.5",
     "ngx-toastr": "^8.7.3",
     "rxjs": "^6.1.0",
     "rxjs-compat": "^6.1.0",
+    "typescript": "~2.3.3",
     "uuid": "^3.2.1",
-    "zone.js": "^0.8.26",
-    "typescript": "~2.3.3"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.0",
     "@angular-devkit/build-angular": "~0.6.1",
-    "typescript": "~2.7.2",
+    "typescript": "~2.3.3",
     "@angular/cli": "~6.0.1",
     "@angular/language-service": "^6.0.0",
     "@types/jasmine": "~2.8.6",
@@ -58,7 +60,6 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "~2.3.3"
+    "tslint": "~5.9.1"
   }
 }
