--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "e2e": "ng e2e"
   },
   "engines": {
-    "node": "8.9.0",
+    "node": "8.6.0",
     "npm": "5.0.1"
   },
   "private": true,
@@ -42,10 +42,10 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.0",
+    "@angular/compiler-cli": "2.3.1",
     "@angular-devkit/build-angular": "~0.6.1",
     "typescript": "~2.3.3",
-    "@angular/cli": "~6.0.1",
+    "@angular/cli": "~1.0.1",
     "@angular/language-service": "^6.0.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
