--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "core-js": "^2.5.4",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "jspdf": "^1.4.1",
     "ng-pick-datetime": "^5.2.5",
     "ngx-toastr": "^8.7.3",
     "rxjs": "^6.1.0",
