--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "jspdf": "^1.4.1",
+    "jspdf-autotable": "^2.3.4",
     "ng-pick-datetime": "^5.2.5",
     "ngx-toastr": "^8.7.3",
     "rxjs": "^6.1.0",
