--- a/package.json
+++ b/package.json
@@ -3,16 +3,11 @@
   "version": "0.0.1",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "ng build --aot --prod"
-  },
-  "engines": {
-    "node": "8.11.2",
-    "npm": "5.6.0"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
