--- a/proxy.config.json
+++ b/proxy.config.json
@@ -1,6 +1,6 @@
 {
     "/api/*": {
-        "target": "http://localhost:3000",
+        "target": "http://159.65.89.101:3000",
         "ws": true,
         "changeOrigin": true,
         "logLevel": "debug"
