--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "angular-font-awesome": "^3.1.2",
+    "angular2-moment": "^1.9.0",
     "angular2-uuid": "^1.1.1",
     "core-js": "^2.5.4",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "font-awesome": "^4.7.0",
     "jspdf": "^1.4.1",
     "jspdf-autotable": "^2.3.4",
     "ng-pick-datetime": "^5.2.5",
